--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-requests==2.24.0
-Flask==1.1.2
+Flask_SQLAlchemy==2.4.4
 pandas==1.1.4
+WTForms==2.3.3
+Flask==1.1.2
+Flask_WTF==0.14.3
+matplotlib==3.3.2
+numpy==1.18.5
+Flask_Bcrypt==0.7.1
+Flask_Login==0.5.0
+requests==2.24.0
 scikit_learn==0.23.2
