--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-WTForms==2.3.3
 Flask_WTF==0.14.3
 pandas==1.1.4
-Flask==1.1.2
+WTForms==2.3.3
+ChatterBot==0.8.7
 Flask_Bcrypt==0.7.1
-Flask_SQLAlchemy==2.4.4
 Flask_Login==0.5.0
+Flask==1.1.2
+Flask_SQLAlchemy==2.4.4
 scikit_learn==0.23.2
