--- a/Map_API_final/scene.yaml
+++ b/Map_API_final/scene.yaml
@@ -15,13 +15,13 @@ sources:
         url: https://xyz.api.here.com/tiles/osmbase/256/all/{z}/{x}/{y}.mvt
         max_zoom: 16
         url_params:
-            access_token:  AIgVAdmaScmN8DijHgoToAA 
+            access_token:  AMYoWBoDTOykTUu01iyRXQA 
 
     fountains:
-     url: https://xyz.api.here.com/hub/spaces/SKYa9ccI/tile/web/{z}_{x}_{y}
+     url: https://xyz.api.here.com/hub/spaces/ZseXmFKM/tile/web/{z}_{x}_{y}
      type: GeoJSON
      url_params:
-         access_token:  AIgVAdmaScmN8DijHgoToAA
+         access_token:  AMYoWBoDTOykTUu01iyRXQA
 
 layers:
 
